[package]
name = "easyflow-link"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.1.4", features = ["json5"] }
amq-protocol-types = "7.0.1"
anyhow = "1.0.69"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"
derivative = "2.2.0"
log = "0.4.17"
humantime-serde = "1.1.1"
async-std = { version = "1.12.0", features = ["attributes"] }
flume = "0.11.0"
dashmap = "5.4.0"
blocking = "1.3.0"
lapin = { version = "2.1.1", optional = true }
once_cell = { version = "1.17.0", optional = true }
dirs = { version = "5.0.1", optional = true }
zenoh = { version = "0.10.1-rc", optional = true, features = ["unstable"] }

[dev-dependencies]
json5 = "0.4.1"
rand = "0.8.5"
tempfile = "3.3.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["unix-sock", "amqp", "zenoh"]
amqp = ["lapin"]
unix-sock = ["dirs", "once_cell"]

# features for tests
amqp-test = []
