[package]
name = "easyflow-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "easyflow"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
easyflow = { path = "../easyflow-rust" }
easyflow-link = { version = "0.1.0", path = "../easyflow-link" }
futures = { version = "0.3.30", features = ["executor", "thread-pool"] }
once_cell = "1.19.0"
tokio = { workspace = true, features = ["sync"] }
