[package]
name = "video_lidar_merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
easyflow = { version = "0.1.0", path = "../../easyflow-rust" }
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
